--- a/index.html
+++ b/index.html
@@ -5,87 +5,127 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/style.css">
-  <script src=“scripts/script.js”></script>
   <title>The Upside Down Amsterdam</title>
 </head>
 <body>
   <header>
-    <button>Klik mij</button>
+    <section>
+      <picture>
+        <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)">
+        <img src="images/logo.jpg" alt="logo van the upside down">
+      </picture>
+      <a href="#Get tickets" class="button">Get tickets</a>
+      <button id="button"></button>
+    </section>
     <nav>
       <ul>
-        <li><img src="images/logo.jpg" alt="logo van the upside down"></li>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Experience</a></li>
+        <li><a href="experience.html">Experience</a></li>
         <li><a href="#">Café</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li>hamburger menu</li>
+        <li><img src="images/divider.png" alt="zwart witte strepen over de pagina" ></li>
       </ul>
     </nav>
   </header>
   <section>
-    <img src="images/slider1.jpg" alt="foto museum" id="slider">
-    <h1>The Upside Down Amsterdam is open again.</h1>
-    <p>Covid test & face masks are not required for a visit!</p>
+    <img src="images/slider.jpg" alt="foto museum" class="dark">
+    <h1>The Upside Down Amsterdam is open again.
+    Covid test & face masks are not required for a visit!</h1>
     <p>Covid test & mondkapjes zijn niet nodig voor een bezoek!</p>
     <p>We will turn your world upside down!</p>
-    <p>Book your tickets we are open again. Stay Healthy and we see you soon!</p>
-    <img src="images/divider.jpg" alt="zwart witte strepen over de pagina">
+    <p>Book your tickets we are open again.</p>
+    <p>Stay Healthy and we see you soon!</p>
   </section>
   <section>
-    <article class="Welkom">
-      <a href="#">
-        <img src="images/afbeelding video homepage.png" alt="fotografie van het museum met model">
-      </a>
+    <article>
+      <img src="images/divider.png" alt="zwart witte strepen over de pagina">
+      <!-- <a href="https://www.youtube.com/watch?v=ytIIwog27M4">
+        <img src="images/videoplaatje.jpg" alt="fotografie van het museum met model">
+      </a> -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ytIIwog27M4" title="YouTube video van The Upside Down" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- Code gekopieerd vanuit Youtube -->
       <h2>Welcome to The Upside Down Amsterdam.</h2>
       <p>The largest interactive Instagram museum in Europe, where you make the rules. It’s like we threw a museum, an amusement park, a nightclub, a few perfect backdrops and some magic mushrooms in a giant blender to create the ultimate Instagrammable Dutch experience. Let us take you on a trip to a whole new dimension that takes you far beyond what you think you know!</p>
-      <a href="#">Experience</a>
+      <a href="#" class="button">Experience</a>
     </article>
-    <article class="What's new">
+    <article>
       <h2>What's new</h2>
       <p>So much happening at The Upside Down Amsterdam. Check out our latest events, news and promotions. Change is our only constant!</p>
-      <a href="#">We are open again!</a>
-      <a href="#">15% parking discount</a>
-      <a href="#">Kids prices</a>
-      <a href="#">15% CJP discount</a>
-      <a href="#">COVID-19 muesures</a>
-      <img src="images/divider.jpg" alt="zwart witte strepen over de pagina">
+      <ul>
+        <li><a href="#">We are open again!</a><img src="images/logo.PNG" alt="logo"></li>
+        <li><a href="#">15% parking discount</a><img src="images/logo.PNG" alt="logo"></li>
+        <li><a href="#">Kids prices</a><img src="images/logo.PNG" alt="logo"></li>
+        <li><a href="#">15% CJP discount</a><img src="images/logo.PNG" alt="logo"></li>
+        <li><a href="#">COVID-19 measures</a><img src="images/logo.PNG" alt="logo"></li>
+      </ul>
+      <img src="images/divider.png" alt="zwart witte strepen over de pagina">
     </article>
   </section>
   <section>
     <h2>The largest ultimate instagram experience with 1500m2 and 25 rooms and decors.</h2>
-    <a href="#">Get tickets</a>
+    <a href="#" class="button2">Get tickets</a>
   </section>
   <footer>
     <section>
       <h2>Follow us and sign up so we can keep you posted!</h2>
+      <ul>
+        <li><img src="images/instagram-white.png" alt="instagram link"></li>
+        <li><img src="images/facebook.png" alt="facebook link"></li>
+        <li><img src="images/tiktok.png" alt="tiktok link"></li>
+        <li><img src="images/whatsapp.png" alt="whatsapp link"></li>
+      </ul>
+      <form action="emailadress">
+        <input type="email" placeholder="Your email address">
+        <input type="submit" value="Send">
+      </form>
     </section>
     <section>
-      <img src="images/logo2.png" alt="logo van the upside down amsterdam">
-      <h2>The Upside Down</h2>
-      <p>Europaboulevard 51079 PC Amsterdam</p>
-      <a href="#">Plan route</a>
+      <ul>
+        <li>Monday</li>
+        <li>Tuesday</li>
+        <li>Wednesday</li>
+        <li>Thursday</li>
+        <li>Friday</li>
+        <li>Saturday</li>
+        <li>Sunday</li>
+      </ul>
+      <ul>
+        <li>10.00 - 19.00</li>
+        <li>10.00 - 19.00</li>
+        <li>10.00 - 19.00</li>
+        <li>10.00 - 19.00</li>
+        <li>10.00 - 20.00</li>
+        <li>10.00 - 20.00</li>
+        <li>10.00 - 19.00</li>
+      </ul>
     </section>
     <section>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Experience</li>
-          <li>Café</li>
-          <li>Shop</li>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
-      <p>MONDAY	10.00 - 19.00
-      TUESDAY	10.00 - 19.00
-      WEDNESDAY	10.00 - 19.00
-      THURSDAY	10.00 - 19.00
-      FRIDAY	10.00 - 20.00
-      SATURDAY	10.00 - 20.00
-      SUNDAY	10.00 - 19.00</p>
+      <ul>
+        <li>
+          <picture> 
+            <source srcset="images/logo2-dark.png" media="(prefers-color-scheme: dark)">
+            <img src="images/logo2.png" alt="logo van the upside down amsterdam">
+          </picture>
+        </li>
+        <li>Europaboulevard 5 <br> 1079 PC Amsterdam</li>
+        <li>
+          <a href="#" class="button">Plan route</a></li>
+      </ul>
+      <ul>
+        <li>Home</li>
+        <li>Experience</li>
+        <li>Café</li>
+        <li>Shop</li>
+        <li>About</li>          
+        <li>Contact</li>
+        <li>Your visit</li>
+        <li>Covid19</li>
+        <li>FAQ</li>
+        <li>Jobs</li>
+      </ul>
     </section>
   </footer>
+  <script src=scripts/script.js></script>
 </body>
 </html>
