--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="color-scheme" content="dark">
   <link rel="stylesheet" href="styles/style.css">
   <title>The Upside Down Amsterdam</title>
 </head>
@@ -25,6 +26,7 @@
         <li><a href="#">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
+        <li><button class="dark-mode">Dark mode</button></li>
         <li><img src="images/divider.png" alt="zwart witte strepen over de pagina" ></li>
       </ul>
     </nav>
