--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="color-scheme" content="dark">
   <link rel="stylesheet" href="styles/style.css">
   <title>The Upside Down Amsterdam</title>
 </head>
@@ -12,10 +13,10 @@
     <section>
       <picture>
         <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)">
-        <img src="images/logo.jpg" alt="logo van the upside down">
+        <img src="images/logo.png" alt="logo van the upside down">
       </picture>
       <a href="#Get tickets" class="button">Get tickets</a>
-      <button id="button"></button>
+      <button></button>
     </section>
     <nav>
       <ul>
@@ -25,6 +26,7 @@
         <li><a href="#">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
+        <li><button class="dark-mode">Dark mode</button></li>
         <li><img src="images/divider.png" alt="zwart witte strepen over de pagina" ></li>
       </ul>
     </nav>
@@ -41,9 +43,6 @@
   <section>
     <article>
       <img src="images/divider.png" alt="zwart witte strepen over de pagina">
-      <!-- <a href="https://www.youtube.com/watch?v=ytIIwog27M4">
-        <img src="images/videoplaatje.jpg" alt="fotografie van het museum met model">
-      </a> -->
       <iframe width="560" height="315" src="https://www.youtube.com/embed/ytIIwog27M4" title="YouTube video van The Upside Down" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- Code gekopieerd vanuit Youtube -->
       <h2>Welcome to The Upside Down Amsterdam.</h2>
       <p>The largest interactive Instagram museum in Europe, where you make the rules. It’s like we threw a museum, an amusement park, a nightclub, a few perfect backdrops and some magic mushrooms in a giant blender to create the ultimate Instagrammable Dutch experience. Let us take you on a trip to a whole new dimension that takes you far beyond what you think you know!</p>
