--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="styles/style.css">
   <title>The Upside Down Amsterdam</title>
 </head>
-<body>
+<body class="dark-mode">
   <header>
     <section>
       <picture>
-        <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)">
+        <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)" class="dark-mode">
         <img src="images/logo.png" alt="logo van the upside down">
       </picture>
       <a href="#Get tickets" class="button">Get tickets</a>
@@ -26,13 +26,13 @@
         <li><a href="#">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><button class="dark-mode">Dark mode</button></li>
-        <li><img src="images/divider.png" alt="zwart witte strepen over de pagina" ></li>
+        <li><button class="buttondark-mode">🌙</button></li>        
+        <li><img src="images/divider.png" alt="zwart witte strepen over de pagina"></li>
       </ul>
     </nav>
   </header>
   <section>
-    <img src="images/slider.jpg" alt="foto museum" class="dark">
+    <img src="images/slider.jpg" alt="foto museum">
     <h1>The Upside Down Amsterdam is open again.
     Covid test & face masks are not required for a visit!</h1>
     <p>Covid test & mondkapjes zijn niet nodig voor een bezoek!</p>
