--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="color-scheme" content="dark">
+  <meta name="color-scheme" content="light dark">
   <link rel="stylesheet" href="styles/style.css">
   <title>The Upside Down Amsterdam</title>
 </head>
 <body class="dark-mode">
   <header>
     <section>
-      <picture>
-        <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)" class="dark-mode">
-        <img src="images/logo.png" alt="logo van the upside down">
-      </picture>
+      <div></div>
       <a href="#Get tickets" class="button">Get tickets</a>
       <button></button>
     </section>
