--- a/experience.html
+++ b/experience.html
@@ -11,12 +11,9 @@
 <body class="dark-mode">
   <header>
     <section>
-        <picture>
-            <source srcset="images/logo-dark.png" media="(prefers-color-scheme: dark)">
-            <img src="images/logo.png" alt="logo van the upside down">
-        </picture>
-      <a href="#Get tickets" class="button">Get tickets</a>
-      <button></button>
+        <div></div>
+        <a href="#Get tickets" class="button">Get tickets</a>
+        <button></button>
     </section>
     <nav>
       <ul>
